--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,17 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/chosen.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/sidebar.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/additional.css">
 
 </head>
 <body>
 
 <div class="wrapper">
 
-    <div id="content" class="pad_top">
+    <div id="content">
+    <!--<div id="content" class="pad_top">-->
 
-        <section class="header header_in">
+        <section class="header header_in hidden">
             <nav class="navbar navbar-default">
                 <div class="container-fluid header_has_width">
 
@@ -42,7 +44,7 @@
         </section>
 
         <div class="container has_width">
-            <section class="table_block">
+            <section class="table_block hidden">
                 <div class="table-responsive">
                     <ul class="share_list">
                         <li><a href="#"><img src="img/twitter.png" alt="" /></a></li>
@@ -69,13 +71,13 @@
                             <td id="authority-title">Ўзбекистон Республикаси Олий ва ўрта махсус таълим вазирлиги</td>
                             <td>10/08/2020</td>
                             <td>10/08/2020</td>
-                            <td>0</td>
+                            <td id="count-comment">25</td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </section>
-            <section>
+            <section class="hidden">
                 <div class="tab_panel">
                     <ul class="nav nav-tabs" role="tablist">
                         <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Русский</a></li>
@@ -100,7 +102,7 @@
                 </div>
                 <span class="number_views"><i class="glyphicon glyphicon-eye-open"></i>72</span>
             </section>
-            <section id="comment-block" class="comment_block" data-doc-id="14184" lang="oz" data-user-id="5328">
+            <section id="comment-block" class="comment_block" data-doc-id="14181" data-lang="oz" data-user-id="5328">
 
             </section>
         </div>
