Send Comment 3rd

--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <span class="number_views"><i class="glyphicon glyphicon-eye-open"></i>72</span>
             </section>
-            <section id="comment-block" class="comment_block" data-doc-id="14110" data-lang="oz" data-user-id="5328">
+            <section id="comment-block" class="comment_block" data-doc-id="14099" data-lang="oz" data-user-id="5328" data-user-spec="6">
 
             </section>
         </div>
