--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="html" lang="oz">
+<html id="html" lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -102,7 +102,7 @@
                 </div>
                 <span class="number_views"><i class="glyphicon glyphicon-eye-open"></i>72</span>
             </section>
-            <section id="comment-block" class="comment_block" data-doc-id="14099" data-lang="oz" data-user-id="5328" data-user-spec="6">
+            <section id="comment-block" class="comment_block" data-doc-id="14068" data-lang="ru" data-user-id="5328" data-user-spec="6">
 
             </section>
         </div>
